--- a/views/page7.ejs
+++ b/views/page7.ejs
@@ -75,7 +75,7 @@
                 Hint: The file is written with a quill.
                 Use the hint to go for the next page.
             </p>
-            <a href="/files/file.txt" class="down" download>Download File</a>
+            <a href="/files/final.bin" class="down" download>Download File</a>
         </div>
     </body>
 </html>
