--- a/views/page8.ejs
+++ b/views/page8.ejs
@@ -105,7 +105,7 @@
         <img src="/images/butterfly.gif" alt="image.gif">
         <p class="hint">Hint: “Look closely at the colors themselves — sometimes the smallest changes speak the loudest.”.</p>
 
-        <form action="/8oRwYy03KsCbHUKxt8FnMTiq9zISejl5" method="POST">
+        <form action="/274877906944" method="POST">
             <input
                 type="text"
                 class="input-field"
