--- a/views/page2.ejs
+++ b/views/page2.ejs
@@ -85,7 +85,7 @@
     <div class="card">
         <h2>The code is the product of the three primes in the image</h2>
         <img src="/images/primes.jpeg" alt="Puzzle image with primes">
-        <p class="hint">Hint: Look at all dimensions</p>
+        <p class="hint">Hint: Look from all dimensions</p>
 
         <form action="/2cPz6Df1HtVUXYgZQeaO48m5WrbKsLxE" method="POST">
             <input
